--- a/css/style.css
+++ b/css/style.css
@@ -1082,7 +1082,7 @@
 			box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.05), inset 0 0.1em 0.1em 0 rgba(0,0,0,0.025);
 			text-align: center;
 			background-image: url('images/overlay.png');
-			height: 100vh
+			height: 100vh;
 		}
 	
 		#main > section.one
